Added get asset url
